package eu.telecomnancy.symbols;

public class Kind {}
