package eu.telecomnancy.symbols;

public class Label extends Symbol {


}
