package eu.telecomnancy.symbols;

public class Procedure extends Symbol {
    public Procedure(String idf, Type type, Kind kind) {
        super(idf, type, kind);
    }
}
