package eu.telecomnancy.symbols;

public class Variable extends Symbol {
    public Variable(String idf, Type type, Kind kind) {
        super(idf, type, kind);
    }
}
