@startuml symbol_table

skinparam Shadowing false
skinparam ArrowColor #222
skinparam ClassBorderColor #bbb
skinparam ClassBackgroundColor white
skinparam DefaultFontName Liberation Mono
skinparam RoundCorner 8

package eu.telecomnancy.symbols {

class SymbolTable {
    + define(Symbol s)
    + Symbol resolve(String idf)
}
SymbolTable o-- "*" Symbol: - symbols: HashMap\n<String,Symbol>
SymbolTable --> "1" SymbolTable: - parent
SymbolTable --> "*" SymbolTable: - children

abstract class Symbol {
    # String identifier
    + Symbol(String idf, Type t)
    + String getIdentifier()
    + Type getType()
    + {abstract} Kind getKind()
}
Symbol <|-- Variable
Symbol <|-- Procedure
Symbol <|-- Label

class Label
class Variable
class Procedure
Procedure --> "1" SymbolTable: - blockSymbolTable
Procedure o--> "*" Type: - parameterTypes

enum Kind {
    PROCEDURE
    VARIABLE
    LABEL
}
Kind .. Symbol

enum Type {
    VOID
    INTEGER
    REAL
    STRING
}

}
' package end

@enduml